--- a/ArsaRExCH/Components/Pages/Home.razor
+++ b/ArsaRExCH/Components/Pages/Home.razor
@@ -22,12 +22,13 @@
     }
 </style>
 
-<div class="win-container">
+<center><div class="win-container">
    <ArsaRExCH.Components.MyComponents.Win></ArsaRExCH.Components.MyComponents.Win>
    <hr />
-   
 
-</div>
+
+    </div>
+</center>
 <ArsaRExCH.Components.MyComponents.MostInzetByUsers></ArsaRExCH.Components.MyComponents.MostInzetByUsers>
 
 <p>Your IP Address: @ipadressII</p>
