Add country name to ip and update method

--- a/ArsaRExCH/Components/Layout/NavMenu.razor
+++ b/ArsaRExCH/Components/Layout/NavMenu.razor
@@ -1,6 +1,7 @@
 ﻿@implements IDisposable
 
 @inject NavigationManager NavigationManager
+@using ArsaRExCH.Components.MyComponents;
 
 <div class="top-row ps-3 navbar navbar-dark" style="background-color:	#F8F8F8">
     <div class="container-fluid">
@@ -29,6 +30,7 @@
                         </button>
                     </form>
                 </div>
+                <center>   <IpPub></IpPub></center>
             </Authorized>
             <NotAuthorized>
                 <div class="nav-item px-3">
