Add Airdrop component empty

--- a/ArsaRExCH/Components/MyComponents/MostInzetByUsers.razor
+++ b/ArsaRExCH/Components/MyComponents/MostInzetByUsers.razor
@@ -4,7 +4,6 @@
 @using ArsaRExCH.Components.Pages
 @using ArsaRExCH.Components.MyComponents
 @rendermode InteractiveServer
-
 @if (isLoading)
 {
     <p>Loading...</p>
@@ -12,7 +11,10 @@
 else
 {
     <div class="table-container">
+        <center> <b><p>Most Inzet By Users</p></b></center>
         <table class="table">
+            
+
             <thead>
                 <tr>
                     <th>Date</th>
