--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -67,6 +67,7 @@
             <a href="AddMoneyBank">Deposit Money</a>
             <a href="Bet1">Bet</a>
             <a href="AdminPanel">Admin Panel</a>
+            <a href="AirDrop">AirDrop</a>
             <!-- Tab 4 with hover effect to show more tabs -->
             <div class="tab-container">
                 <a  class="main-tab">User Information</a>
