--- a/ArsaRExCH/Components/Pages/AirDrop.razor
+++ b/ArsaRExCH/Components/Pages/AirDrop.razor
@@ -15,10 +15,10 @@
 
    <div class="div-container">
         <div class="fixed-div">70</div>
-    <div class="fixed-div">Level 2</div>
-    <div class="fixed-div">Level 3</div>
-    <div class="fixed-div">Level 4</div>
-    <div class="fixed-div">Level 5</div>
+    <div class="fixed-div">100</div>
+    <div class="fixed-div">140</div>
+    <div class="fixed-div">200</div>
+    <div class="fixed-div">240</div>
     <div class="fixed-div">Level 6</div>
     <div class="fixed-div">Level 7</div>
     <div class="fixed-div">Level 8</div>
@@ -43,6 +43,10 @@
 </div>
 <p>@Message</p>
 </center>
+<br />
+<br />
+<br />
+<p><a href="">Go To AirDrop Faq</a></p>
 <style>
     .airdrop-title {
         font-family: Arial, sans-serif;
