--- a/ArsaRExCH/Components/MyComponents/AirDropFaq.razor
+++ b/ArsaRExCH/Components/MyComponents/AirDropFaq.razor
@@ -14,7 +14,11 @@
 
 
 @code {
-
+    /*
+     * This page shows adin message to users , adin gets access to post and user wil see
+     * other page in administration neede to get this done .
+     * In next phase also users are able to replly on each post 
+     */
     private string user2{ get; set; }
     protected override async Task OnInitializedAsync()
     {
