Somw changes airdop and amounts

--- a/ArsaRExCH/Components/MyComponents/DailyClickCount.razor
+++ b/ArsaRExCH/Components/MyComponents/DailyClickCount.razor
@@ -12,7 +12,7 @@
 @inject NavigationManager manager
 @inject ArsaRExCH.Interface.AirDropInterface _airDropInterface
 
-<p class="balance-display">XX Daily CLick : @Currentbalance </p>
+<p class="balance-display">Clicked Today : @Currentbalance </p>
 
 <style>
     .balance-display {
