--- a/ArsaRExCH/Components/Pages/AdminPanel.razor
+++ b/ArsaRExCH/Components/Pages/AdminPanel.razor
@@ -46,7 +46,7 @@
     private string[] links = new string[]
     {
         "/BannedCountry", "/UserInformation", "/Add Pair", "/BetListAdmin", "/RoleManagerAdmin",
-        "/page6", "/page7", "/page8", "/page9", "/page10",
+        "/AirDropFaq", "/page7", "/page8", "/page9", "/page10",
         "/page11", "/page12", "/page13", "/page14", "/page15"
     };
 
