--- a/ArsaRExCH/Components/Pages/AirDropFaq.razor
+++ b/ArsaRExCH/Components/Pages/AirDropFaq.razor
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Authorization
+﻿@page "/AirDropFaq"
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 @inject NavigationManager NavigationManager
 @using System.Security.Claims
