--- a/ArsaRExCH/Components/Layout/MainLayout.razor
+++ b/ArsaRExCH/Components/Layout/MainLayout.razor
@@ -68,6 +68,8 @@
             <a href="Bet1">Bet</a>
             <a href="AdminPanel">Admin Panel</a>
             <a href="AirDrop">AirDrop</a>
+            <a href="Forum">Forum</a>
+            
             <!-- Tab 4 with hover effect to show more tabs -->
             <div class="tab-container">
                 <a  class="main-tab">User Information</a>
